<resources>
    <string name="app_name">小装小修(师傅端)</string>

    <!--首页-->
    <string name="today_income">今日收入</string>

    <string name="today_order">今日接单</string>

    <string name="sum_order">累计接单</string>

    <string name="suspend_receipt">暂停接单</string>

    <string name="whether_suspend_receipt">是否暂停接单</string>

    <string name="suspend_receipt_tip">暂停接单系统将无法给您推送订单</string>

    <string name="no_consider">暂不考虑</string>

    <string name="suspend_sure">确定暂停</string>

    <!--个人中心-->
    <string name="personal_info">个人资料</string>

    <string name="edit">编辑</string>

    <string name="sex">性别</string>

    <string name="birthday">生日</string>

    <string name="phone_number">电话</string>

    <string name="job">职业</string>

    <string name="skill_in_skill">擅长技能</string>

    <string name="personal_center">个人中心</string>

    <string name="sum_score">综合评分</string>

    <string name="performance_score">表现得分</string>

    <string name="my_orders">我的订单</string>

    <string name="my_wallet">我的钱包</string>

    <string name="setting">设置</string>

    <string name="owner_order">我的订单</string>
    
    <string name="send_to_headquarters">发给总部</string>

    <string name="service_completion">服务完成</string>

    <string name="delete_order">删除订单</string>

    <string name="order_detail">订单详情</string>

    <string name="look_more">阅读详细</string>

    <string name="service_cost">服务费</string>

    <string name="modify_cost">修改金额</string>

    <string name="order_number">订单编号</string>

    <string name="order_date">订单时间</string>

    <string name="payment_state">支付状态</string>

    <string name="payment_method">支付方式</string>

    <string name="all_order">全部订单</string>

    <string name="to_be_receipt">待收款</string>

    <string name="after_sale_service">售后服务</string>

    <string name="in_service">服务中</string>

    <string name="completed">已完成</string>

    <string name="my_balance">我的余额</string>

    <string name="put_forward">提现</string>

    <string name="my_band_card">我的银行卡</string>

    <string name="my_bill">我的账单</string>

    <string name="balance">余额提现</string>

    <string name="balance_record">提现记录</string>

    <string name="to_band_card">到账银行卡</string>

    <string name="amount_balance">提现金额</string>

    <string name="sum_amount_balance">全部可提现余额</string>

    <string name="all_balance">全部提现</string>

    <string name="select_to_band_card">选择到账银行卡</string>

</resources>
